# personal-website

./: .gitignore  Cargo.toml  README.md  package.json  tailwind.config.ts
server_files/static/: 404.txt  gen.css  global.css
src/: main.rs
templates/: base.html  blog.html  blogpost.html  homepage.html  projects.html
