[package]
name = "personal-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.7", features = ["http2"] }
tokio = {version = "1.40.0", features = ["full"] }
serde = "1.0.210"
rusqlite = "0.32.1"
noise = "0.9.0"